Websocket checks the sessionKey that is sent through the uri, responds with "Hallo <username>" on message

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "url": "^0.11.1",
+    "ws": "^8.13.0"
   }
 }
